clusters/home/applications/home/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: home
  labels:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/part-of: home-assistant
spec:
  ingressClassName: traefik
  rules:
    - host: "home-assistant.home.arpa"
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: home-assistant
                port:
                  number: 8123
